--- a/learningDj/templates/pages/index.html
+++ b/learningDj/templates/pages/index.html
@@ -1,1 +1,10 @@
-name={{name}} age={{age}}
+<!-- capfirst => first letter captial
+ default => put default value if someting wrong happend 
+ slice => fragmentation of the sentence
+ length => length of string
+ add => add somthing to the value came from views
+ cut => remove anything from sentence
+ filesizeformat => convert number to readable foramt
+ -->
+name={{name |cut:' '}} <br />
+age={{age|filesizeformat}}
