--- a/learningDj/templates/pages/index.html
+++ b/learningDj/templates/pages/index.html
@@ -1,8 +1,7 @@
 <!-- 
-    Tags in dtl 
-    -Synatax
-    -How to work
-    -Examples
+    block
   -->
 
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<h1>Hello from other side</h1>
+{% endblock %}
