--- a/learningDj/templates/base.html
+++ b/learningDj/templates/base.html
@@ -4,4 +4,6 @@
   }
 </style>
 
-{% block content %} {% endblock content %}
+{% include 'parts/navbar.html' %} <br />
+{% block content %} {% endblock content %} <br />
+{% include 'parts/footer.html' %}
