--- a/learningDj/templates/pages/index.html
+++ b/learningDj/templates/pages/index.html
@@ -2,6 +2,15 @@
     block
   -->
 
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block content %} {% for x in name %}
+<p>{{x}}</p>
+{% endfor %} {% if name == 'mido' %}
+<p>mido</p>
+{% elif name == 'ali'%}
+<p>ali</p>
+{%else%}
+<p>hamid</p>
+{% endif %}
+
 <h1>Hello from other side</h1>
 {% endblock %}
