url and comment tags

--- a/learningDj/templates/parts/navbar.html
+++ b/learningDj/templates/parts/navbar.html
@@ -1,1 +1,6 @@
-<p>navbar</p>
+<span><a href="{% url 'index' %}">Home</a></span>
+<span><a href="{% url 'about' %}">About</a></span>
+
+{% comment %}
+<h1>dasfsa</h1>
+{% endcomment %}
