--- a/learningDj/templates/products/products.html
+++ b/learningDj/templates/products/products.html
@@ -5,5 +5,7 @@
         <h1>{{product.name}}</h1>
         <h1>{{product.content}}</h1>
 
+        <img src="{{product.image.url}}" alt="">
+
     {%  endfor %}
 {%  endblock content %}
