--- a/learningDj/templates/pages/about.html
+++ b/learningDj/templates/pages/about.html
@@ -1,3 +1,18 @@
-{% extends 'base.html' %} {% block content %}
-<h1>Hello from other side</h1>
+{% extends 'base.html' %}
+
+
+{% block content %}
+    <form action="" method="post">
+        {% csrf_token %}
+        <br>
+
+        <input type="text" name="username" placeholder="username">
+        <br>
+
+        <input type="password" name="password" placeholder="password">
+        <br>
+
+        <input type="submit" value="Login">
+    </form>
+
 {% endblock %}
